force-app/main/default/objects/OTP__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExpired</label>
    <type>Checkbox</type>
</CustomField>