force-app/main/default/objects/OTP__c/fields/IsUsed__c.field-meta.xml
<CustomField>
    <fullName>IsUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUsed</label>
    <type>Checkbox</type>
</CustomField>