force-app/main/default/objects/OTP__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTP_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>