force-app/main/default/objects/OTP__c/fields/OTP_Master__c.field-meta.xml
<CustomField>
    <fullName>OTP_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTP_Master</label>
    <referenceTo>OTP_Master__c</referenceTo>
    <relationshipLabel>OTP</relationshipLabel>
    <relationshipName>OTP</relationshipName>
    <type>Lookup</type>
</CustomField>